Removed Notify Email from group buy

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -2000,7 +2000,7 @@
                 </div>
             </div>
         </div>
-        <Divider></Divider>
+        @* <Divider></Divider>
         <div class="row">
             <div class="col-2">
                 <fieldLabel>@L["NotifyEmail"]</fieldLabel>
@@ -2044,7 +2044,7 @@
                     </Blazored.TextEditor.BlazoredTextEditor>
                 </div>
             </div>
-        </div>
+        </div> *@
         @*     <Divider></Divider>
         <div class="row">
              <div class="col-2">
