--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -2063,7 +2063,7 @@
                 </div>
             </div>
         </div>
-        <Divider></Divider>
+        @* <Divider></Divider>
         <div class="row">
             <div class="col-2">
                 <fieldLabel>@L["NotifyEmail"]</fieldLabel>
@@ -2107,7 +2107,7 @@
                     </Blazored.TextEditor.BlazoredTextEditor>
                 </div>
             </div>
-        </div>
+        </div> *@
 
         <Row>
             <Column ColumnSize="ColumnSize.Is2">@L["Availability"]</Column>
