Commit For Pk-1618

--- a/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/CreateProductCategory.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/CreateProductCategory.razor
@@ -42,7 +42,7 @@
                     <Column ColumnSize="ColumnSize.Is12.Is9.OnDesktop">
                         <Validation MessageLocalizer="@LH.Localize">
                             <Field>
-                                <FieldLabel>@L["Name"] *</FieldLabel>
+                                <FieldLabel>@L["EnglishName"] *</FieldLabel>
                                 <TextEdit @bind-Text="@NewEntity.Name">
                                     <Feedback>
                                         <ValidationError />
