--- a/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/EditProductCategory.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/EditProductCategory.razor
@@ -64,7 +64,7 @@
                     <Column ColumnSize="ColumnSize.Is12.Is9.OnDesktop">
                         <Validation MessageLocalizer="@LH.Localize">
                             <Field>
-                                <FieldLabel>@L["Name"] *</FieldLabel>
+                                <FieldLabel>@L["EnglishName"] *</FieldLabel>
                                 <TextEdit @bind-Text="@EditingEntity.Name">
                                     <Feedback>
                                         <ValidationError />
