--- a/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/ProductCategories.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ProductCategories/ProductCategories.razor
@@ -100,6 +100,19 @@
                         {
                             @context.Name;
                         }
+               @if(rowsWithDetail.Contains(context.Id))
+               {
+                      <Button>
+                <Icon Name="IconName.ExpandLess"/>
+</Button>
+               }
+               else{
+                    <Button>
+                        <Icon Name="IconName.ExpandMore"/>
+                        </Button>
+                       
+               }
+               
                     </DisplayTemplate>
                 </DataGridColumn>
                 <DataGridColumn TItem="ProductCategoryDto"
